2018-05-05
    Rename .elpchar variable to use same convention as .sentchar,
    .transchar, etc.

2018-05-05
    Add .rhanglevel to table of request names; .rhanglevel should work now.

2018-05-05
    Update .elpchar for change to propchar().  .elpchar options now work the
    same as .sentchar, .transchar, etc.

2018-05-05
    Mark end of user-defined list in propchar().  Default list can now be
    restored with \r.  

2018-04-15
    Move typo variables into the troff environment.

2018-01-28
    afm.c:  Conflicting math names expose a bug in dpost that puts wrong glyph
    in output.

2018-01-26
    Do not count sentence spaces as adjustable when doing letter adjustment.

2018-01-26
    Do not take rhang into account for penalties that don't affect word spaces.

2018-01-22
    Make selecting word space bins less inefficient.

2018-01-22
    Take rhang into account when making decision for lastlinestretch.

2018-01-20
    Various minor edits to parcomp_rf().

2018-01-20
    Take rhang into account for some minor features in parcomp().

2018-01-11
    Explicit hyphen penalty .exhyp now acts like the current-line hyphenation
    penalty hypp1.

2018-01-08
    Add .rhanglevel to take .rhang into account when breaking lines.

2018-01-08
    Use correct reference to get the last character on the line when
    offsetting letterspacing.

2018-01-07
    More code cleanup for letshrink_rf(), letgrow_rf(), and penalty_rf().

2018-01-07
    Simplify memory use for looseness.

2018-01-02
    Allow lower wordspace range to be 0.

2017-12-29
    When setting Heirloom mode with .wscalc 0, also set letter adjustment
    method to Heirloom's (.letcalc 0).  .letcalc can be changed later
    if desired.

2017-12-29
    Remove leftover references to two-digit .letcalc modes.

2017-12-29
    Remove PDF documents.

2017-12-28
    Add hypp4 to discourage hyphenating the next-to-last line of a paragraph.

2017-12-21